######### 2013-8-12  ##########
alter table shop_items_product add column post_check tinyint(1) NOT NULL;
alter table shop_items_productsku add column post_check tinyint(1) NOT NULL;
alter table shop_items_product add column barcode varchar(64) NOT NULL,add index (barcode);
alter table shop_items_productsku add column barcode varchar(64) NOT NULL,add index (barcode);
######### 2013-8-10  ##########
alter table shop_purchases_payment add column supplier_id int(11) ,add FOREIGN KEY(supplier_id) references shop_archives_supplier(id);
######### 2013-8-7  ##########
alter table shop_items_product drop district_id;
alter table shop_items_productsku drop district_id;
######### 2013-8-6  ##########
alter table shop_items_product add column district_id int(11) ,add FOREIGN KEY(district_id) references shop_archives_depositedistrict(id);
alter table shop_items_productsku add column district_id int(11) ,add FOREIGN KEY(district_id) references shop_archives_depositedistrict(id);
######### 2013-7-31  ##########
alter table shop_purchases_item change column status status varchar(12) NOT NULL;
alter table shop_purchases_item change column arrival_status arrival_status varchar(12) NOT NULL;
alter table shop_purchases_storage change column status status varchar(12) NOT NULL;
alter table shop_purchases_storageitem change column status status varchar(12) NOT NULL;
######### 2013-7-20  ###########
alter table shop_purchases_purchase add column prepay double NOT NULL;
alter table shop_purchases_item add column prepay double NOT NULL;
alter table shop_purchases_storage add column prepay double NOT NULL;
alter table shop_purchases_storageitem add column prepay double NOT NULL;
alter table shop_purchases_relationship add column prepay double NOT NULL;

######### 2013-7-20  ###########
alter table shop_monitor_systemconfig add column storage_num_to_stock_auto tinyint(1) NOT NULL;
alter table shop_monitor_systemconfig add column purchase_price_to_cost_auto tinyint(1) NOT NULL;
