@@ -60,6 +60,10 @@
               </a>
             </li>
             <li>
+              <a href="/items/product/barcode/" class="addlink" target="_blank">条码管理
+              </a>
+            </li>
+            <li>
               <a href="{% url cl.opts|admin_urlname:'add' %}{% if is_popup %}?_popup=1{% endif %}" class="addlink">
                 {% blocktrans with cl.opts.verbose_name as name %}新{{ name }}{% endblocktrans %}
               </a>
