@@ -1,1 +1,1 @@
-亲，您的宝贝已由【{{ trade.logistics_company.name }}】发出，单号：【{{ trade.out_sid }}】,给5星+写20字以上好评会有惊喜哦！{% if prompt_msg %}温馨提示:{{ prompt_msg }}{% endif %}
+亲，您的宝贝已由【{{ trade.logistics_company.name }}】发出，单号【{{ trade.out_sid }}】,给5星+写20字以上好评会有惊喜哦！{% if prompt_msg %}(温馨提示:{{ prompt_msg }}){% endif %}
