@@ -1,3 +1,5 @@
+######### 2013-8-16  ##########
+alter table shop_items_productsku change outer_id outer_id varchar(64) NOT NULL;
 ######### 2013-8-12  ##########
 alter table shop_items_product add column post_check tinyint(1) NOT NULL;
 alter table shop_items_productsku add column post_check tinyint(1) NOT NULL;
